--- a/package.json
+++ b/package.json
@@ -91,6 +91,8 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "imagesloaded": "^4.1.4",
+    "isotope-layout": "^3.0.5",
     "svg4everybody": "^2.1.9"
   },
   "browserslist": [
