--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^2.2.0",
     "gulp-copy": "^1.0.1",
-    "gulp-css-unit": "^1.2.2",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.0",
     "gulp-eslint": "^4.0.0",
@@ -85,6 +84,7 @@
     "merge-stream": "^1.0.1",
     "pixel-glass": "^1.0.13",
     "postcss-reporter": "^5.0.0",
+    "sort-css-media-queries": "^1.3.4",
     "stylelint": "^8.3.1",
     "stylelint-config-htmlacademy": "^0.1.x",
     "vinyl-buffer": "^1.0.1",
@@ -93,6 +93,7 @@
   "dependencies": {
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.5",
+    "mixitup": "^3.2.2",
     "svg4everybody": "^2.1.9"
   },
   "browserslist": [
